Nouvelle version du problème "TwoFer" de exercism suite aux retours du mentor. MAJ des tests également.